1.配置网站图标 favicon 2.安装清除webpack插件的 清除dist

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!--网站图标-->
+    <link rel="icon" type="image/x-icon" href="static/image/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="static/image/favicon.ico">
     <title>es6andvue</title>
   </head>
   <body>
