--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="static/image/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="static/image/favicon.ico">
     <title>es6andvue</title>
+    <script src="https://cdn.bootcss.com/echarts/4.2.1/echarts.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
